# embeddings

./: .gitignore  README.md  embeddings_tasks.yaml  pinecone_migrations.yaml  pyproject.toml
config/: embedding_config.config
queries/big_query/select_queries/: company_profiles_semantic_search.sql  earnings_transcripts_search.sql  news_semantic_search.sql
src/: embeddings.py  vertex_ai_embeddings.py
src/scripts/: create_embeddings.py  validator.py
src/scripts/examples/: pinecone_search_example.py  rag_example.py
src/scripts/migrations/: migrate_to_pinecone.py
src/utils/: task_utils.py  utils.py
terraform/: .gitignore  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
