[tool.poetry]
name = "embeddings"
version = "0.1.0"
description = ""
authors = ["manuel <manuelpazpintor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.10"
numpy = "2.1.1"
pandas = "2.2.3"
scikit-learn = "^1.5.2"
yfinance = "^0.2.61"
requests = "^2.32.3"
requests-cache = "^1.2.1"
tqdm = "^4.66.5"
ipykernel = "^6.29.5"
plotly = "^5.24.1"
dash = "^2.18.1"
dash-auth = "^2.3.0"
sqlalchemy = "2.0.21"
dash-bootstrap-components = "^1.6.0"
uvicorn = "0.23.2"
nbformat = ">=4.2.0"
pyarrow = "19.0.1"
polars = "^1.17.0"
transformers = "^4.47.0"
beautifulsoup4 = "^4.12.3"
seaborn = "^0.13.2"
streamlit = "^1.41.1"
google-cloud-storage = "^2.14.0"
flask = "<3.1"
python-dotenv = "^1.0.1"
flask-cors = "^5.0.0"
pymysql = "^1.1.1"
db-dtypes = "^1.3.1"
selenium = "^4.29.0"
webdriver-manager = "^4.0.2"
undetected-chromedriver = "^3.5.5"
langchain = "^0.3.23"
langchain-community = "^0.3.21"
unstructured = "^0.17.2"
python-magic = "^0.4.27"
langchain-google-community = "^2.0.7"
jq = "^1.8.0"
sentence-transformers = "^4.0.2"
faiss-cpu = "^1.10.0"
PyYAML = "6.0.2"
openai = "1.77.0"
google-cloud-firestore ="2.20.2"
google-cloud-bigquery = { version = "3.27.0", extras = ["all"] }
google-cloud-iam = "2.14.0"
google-cloud-resource-manager = "1.14.2"
google-cloud-bigquery-datatransfer = "3.19.2"
uv = "^0.7.14"
redis = "^6.2.0"
gnews = "^0.4.1"
firebase = "^4.0.1"
pyrebase4 = "4.6.0"
pinecone = "^7.3.0"
[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
select =  ["E", "W", "F"]
ignore = ["E501"]